--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hapi": "^16.5.2",
     "hapi-cors-headers": "^1.0.0",
+    "keygenerator": "^1.0.4",
     "mongodb": "^2.2.31"
   }
 }
