--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hapi": "^16.5.2",
     "hapi-cors-headers": "^1.0.0",
     "keygenerator": "^1.0.4",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "swig": "^1.4.2"
   }
 }
