--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hapi-cors-headers": "^1.0.0",
     "keygenerator": "^1.0.4",
     "mongodb": "^2.2.31",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "valid-url": "^1.0.9"
   }
 }
