--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Olakunle Dosunmu",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "hapi": "^16.5.2",
     "hapi-cors-headers": "^1.0.0",
